# hanasu

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  data-pipeline.md
plans/monotonic-align/: monotonic-align_001.py
scripts/: infer.py  prepare_audio.py  prepare_data.py  prepare_mels.py  train.py
src/: commons.py  config.json  infer.py  models.py  text.py  train.py  transforms.py  utils.py
